add update project
